--- a/fondos.css
+++ b/fondos.css
@@ -1,19 +1,19 @@
 body{
-    background-image: url(./img/b.jpg);
+    background-image: url(https://static1-es.millenium.gg/articles/6/37/53/6/@/176559-rust-article_cover_bd-1.jpg);
 }
 
 #cabecera{
-    background-image: url(./img/c.jpg);
+    background-image: url(https://i.blogs.es/61f140/rustportada/840_560.jpeg);
 }
 
 #indice{
-    background-image: url(./img/d.jpg);
+    background-image: url(https://as01.epimg.net/meristation/imagenes/2021/03/13/noticias/1615638005_269100_1615638046_noticia_normal.jpg);
 }
 
 #contenido{
-    background-image: url(./img/e.jpg);
+    background-image: url(https://videojuegos.roams.es/images/post/es_ES_videogames/juegos-rust.jpg);
 }
 
 #piedepagina{
-    background-image: url(./img/f.jpg);
+    background-image: url(https://cdn7.idcgames.com/storage/image/1125/game_home_video_bg_embebed/default.jpg);
 }
